# dj_inspector

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
dj_inspector/: cli.py
dj_inspector/checkers/: admin_checker.py  security_checker.py  setting_checker.py
dj_inspector/core/: inspector.py
dj_inspector/utils/: constants.py
tests/: test_admin_checker.py  test_cli.py  test_constants.py  test_inspector.py  test_security_checker.py  test_setting_checker.py  test_utils.py
