[project]
name = "dj-inspector"
version = "0.1.0"
description = "dj-inspector is a specialized security analysis tool for Django applications that detects vulnerabilities, misconfigurations, and security anti-patterns. It helps ensure your Django project follows security best practices while also checking for related quality issues."
authors = [
    {name = "Gaëtan",email = "hello@gaetangrond.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "rich",
    "ast"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
